test_suite/tests/ui/unexpected-literal/container.stderr
error: expected path
 --> tests/ui/unexpected-literal/container.rs:4:9
  |
4 | #[serde("literal")]
  |         ^^^^^^^^^
